--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <color="blue"><title>Rafael Ferreira - n°21 - 3°B</title></color>
+    <title> Trabalho Matemática </title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <color="blue"><h1>Rafael Ferreira - n°21 - 3°B</h1></color>
     <div id="contagemRegressiva">
         <h2>Contagem Regressiva</h2>
         <input type="number" id="inicioContagem" placeholder="Digite um número">
