--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <color="blue"><h1>Rafael Ferreira - n°21 - 3°B</h1></color>
+    <color= "white"><h1>Rafael Ferreira - n°21 - 3°B</h1></color>
     <div id="contagemRegressiva">
         <h2>Contagem Regressiva</h2>
         <input type="number" id="inicioContagem" placeholder="Digite um número">
